<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D9FA8DA"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans"
        android:gravity="center"
        android:text="@string/suggested_wake_up_times"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />


    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTintMode="add"
        android:fontFamily="@font/dm_sans"
        android:text=""
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/leastSleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFAB40"
        android:fontFamily="@font/dm_sans"
        android:gravity="center"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/least_sleep"
        app:layout_constraintBottom_toTopOf="@id/bestSleep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <Button
        android:id="@+id/bestSleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#BC327E35"
        android:fontFamily="@font/dm_sans"
        android:gravity="center"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/best_sleep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tooMuchSleep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leastSleep"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/tooMuchSleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFAB40"
        android:fontFamily="@font/dm_sans"
        android:gravity="center"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/too_much_sleep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestSleep"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/sleepTimeBlurb"
        android:layout_width="293dp"
        android:layout_height="46dp"
        android:fontFamily="@font/dm_sans"
        android:gravity="center"
        android:text="@string/based_on_a_sleep_time_of"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

</androidx.constraintlayout.widget.ConstraintLayout>