<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="374dp"
        android:layout_height="154dp"
        android:fontFamily="@font/dm_sans"
        android:gravity="center"
        android:text="@string/out_the_door"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTintMode="add"
        android:fontFamily="@font/dm_sans"
        android:text=""
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/sleepingNowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#BC327E35"
        android:fontFamily="@font/dm_sans"
        android:gravity="center"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/sleeping_now"
        app:layout_constraintBottom_toTopOf="@id/sleepingSoonButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time"
        app:layout_constraintVertical_bias="0.655" />

    <Button
        android:id="@+id/sleepingSoonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:backgroundTint="#BC327E35"
        android:fontFamily="@font/dm_sans"
        android:gravity="center"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/sleeping_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!---
    <Button
        android:id="@+id/sleepSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/sleep_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleepingSoonButton"
        app:layout_constraintVertical_bias="0.5" />

    -->

</androidx.constraintlayout.widget.ConstraintLayout>